--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -28,7 +28,26 @@ services:
       - NUMERO=1111
     volumes:
       - ./client/config.yaml:/config.yaml
-      - ./.data/agency-1.csv:/agency-1.csv
+      - ./.data/agency-1.csv:/agency.csv
+    networks:
+      - testing_net
+    depends_on:
+      - server
+  client2:
+    container_name: client2
+    image: client:latest
+    entrypoint: /client
+    environment:
+      - CLI_ID=2
+      - CLI_LOG_LEVEL=DEBUG
+      - NOMBRE=NOMBRE2
+      - APELLIDO=APELLIDO2
+      - DOCUMENTO=DOCUMENTO2
+      - NACIMIENTO=2222-10-10
+      - NUMERO=2222
+    volumes:
+      - ./client/config.yaml:/config.yaml
+      - ./.data/agency-2.csv:/agency.csv
     networks:
       - testing_net
     depends_on:
