--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -9,6 +9,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - LOGGING_LEVEL=DEBUG
+      - CANTIDAD_CLIENTES=2
     volumes:
       - ./server/config.ini:/config.ini
     networks:
