--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -24,7 +24,7 @@ services:
       - NOMBRE=NOMBRE1
       - APELLIDO=APELLIDO1
       - DOCUMENTO=DOCUMENTO1
-      - NACIMIENTO=1111-10-11
+      - NACIMIENTO=1111-10-10
       - NUMERO=1111
     volumes:
       - ./client/config.yaml:/config.yaml
@@ -42,8 +42,62 @@ services:
       - NOMBRE=NOMBRE2
       - APELLIDO=APELLIDO2
       - DOCUMENTO=DOCUMENTO2
-      - NACIMIENTO=2222-10-22
+      - NACIMIENTO=2222-10-10
       - NUMERO=2222
+    volumes:
+      - ./client/config.yaml:/config.yaml
+    networks:
+      - testing_net
+    depends_on:
+      - server
+  client3:
+    container_name: client3
+    image: client:latest
+    entrypoint: /client
+    environment:
+      - CLI_ID=3
+      - CLI_LOG_LEVEL=DEBUG
+      - NOMBRE=NOMBRE3
+      - APELLIDO=APELLIDO3
+      - DOCUMENTO=DOCUMENTO3
+      - NACIMIENTO=3333-10-10
+      - NUMERO=3333
+    volumes:
+      - ./client/config.yaml:/config.yaml
+    networks:
+      - testing_net
+    depends_on:
+      - server
+  client4:
+    container_name: client4
+    image: client:latest
+    entrypoint: /client
+    environment:
+      - CLI_ID=4
+      - CLI_LOG_LEVEL=DEBUG
+      - NOMBRE=NOMBRE4
+      - APELLIDO=APELLIDO4
+      - DOCUMENTO=DOCUMENTO4
+      - NACIMIENTO=4444-10-10
+      - NUMERO=4444
+    volumes:
+      - ./client/config.yaml:/config.yaml
+    networks:
+      - testing_net
+    depends_on:
+      - server
+  client5:
+    container_name: client5
+    image: client:latest
+    entrypoint: /client
+    environment:
+      - CLI_ID=5
+      - CLI_LOG_LEVEL=DEBUG
+      - NOMBRE=NOMBRE5
+      - APELLIDO=APELLIDO5
+      - DOCUMENTO=DOCUMENTO5
+      - NACIMIENTO=5555-10-10
+      - NUMERO=5555
     volumes:
       - ./client/config.yaml:/config.yaml
     networks:
